discussion/kv_engine/180238/180238_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53597: Add task group for all tasks of all taskables

We currently do not gather stats for the NoBucket taskable but we are
adding more tasks to it for the cross-Bucket memory sharing work. These
stats may be useful in the future, so add an additional stat group that
gathers stats from all Ready Buckets (we cannot touch non-Ready Buckets
easily) and the NoBucket taskable for later use in cbcollect_info.

Change-Id: I56a00a1e92c32bc9aa39c44e1e090d98b8f8aeb9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-21 12:27:45.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-21 12:29:07.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20526/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:586:13: error: use of undeclared identifier "NoBucketTaskable" [clang-diagnostic-error]
            NoBucketTaskable::instance(), &cookie, appendStatsFn);
            ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20526/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:586:13:
error: use of undeclared identifier "NoBucketTaskable" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20526/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19751/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-09-21 12:30:59.000000000
Message: 
Set Ready For Review
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-21 12:33:38.000000000
Message: 
Patch Set 4: Verified-1 -Code-Review

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49535/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49535/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10233/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10233/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10233/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21888/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21888/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22501/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22501/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10332/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10332/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22872/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22872/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23664/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23664/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30901/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30901/ )
----------------------------------------------------------------------------------------------------------------------
